--- a/ui/dakia.glade
+++ b/ui/dakia.glade
@@ -4,12 +4,13 @@
   <!-- interface-naming-policy project-wide -->
   <widget class="GtkWindow" id="mainWindow">
     <property name="width_request">400</property>
-    <property name="height_request">200</property>
+    <property name="height_request">250</property>
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">eDakia</property>
     <property name="resizable">False</property>
     <property name="window_position">center-always</property>
     <property name="icon">logopostbox-small.jpg</property>
+    <property name="type_hint">dialog</property>
     <signal name="destroy" handler="on_mainWindow_destroy" swapped="no"/>
     <signal name="key_press_event" handler="on_mainWindow_key_press_event" swapped="no"/>
     <child>
