--- a/ui/edakia.glade
+++ b/ui/edakia.glade
@@ -10,6 +10,7 @@
     <property name="resizable">False</property>
     <property name="window_position">center-always</property>
     <property name="icon">logopostbox.jpg</property>
+    <signal name="destroy" handler="on_processWindow_destroy" swapped="no"/>
     <child>
       <widget class="GtkVBox" id="vbox2">
         <property name="visible">True</property>
