swapped warning removed

--- a/ui/edakia.glade
+++ b/ui/edakia.glade
@@ -10,7 +10,7 @@
     <property name="resizable">False</property>
     <property name="window_position">center-always</property>
     <property name="icon">logopostbox.jpg</property>
-    <signal name="destroy" handler="on_processWindow_destroy" swapped="no"/>
+    <signal name="destroy" handler="on_processWindow_destroy" />
     <child>
       <widget class="GtkVBox" id="vbox2">
         <property name="visible">True</property>
@@ -73,7 +73,7 @@
     <property name="title" translatable="yes">eDakia - Mail for All</property>
     <property name="window_position">center-always</property>
     <property name="icon">logopostbox.jpg</property>
-    <signal name="destroy" handler="on_pydakia_destroy" swapped="no"/>
+    <signal name="destroy" handler="on_pydakia_destroy" />
     <child>
       <widget class="GtkVBox" id="vbox3">
         <property name="visible">True</property>
@@ -141,7 +141,7 @@
                 <property name="secondary_icon_activatable">False</property>
                 <property name="primary_icon_sensitive">True</property>
                 <property name="secondary_icon_sensitive">True</property>
-                <signal name="key_press_event" handler="on_field_sender_mobile_key_press_event" swapped="no"/>
+                <signal name="key_press_event" handler="on_field_sender_mobile_key_press_event" />
               </widget>
               <packing>
                 <property name="expand">True</property>
@@ -207,7 +207,7 @@
                 <property name="receives_default">True</property>
                 <property name="use_action_appearance">False</property>
                 <property name="use_stock">True</property>
-                <signal name="clicked" handler="on_oncancel_clicked" swapped="no"/>
+                <signal name="clicked" handler="on_oncancel_clicked" />
               </widget>
               <packing>
                 <property name="expand">False</property>
@@ -223,7 +223,7 @@
                 <property name="receives_default">True</property>
                 <property name="use_action_appearance">False</property>
                 <property name="use_stock">True</property>
-                <signal name="clicked" handler="on_enter_clicked" swapped="no"/>
+                <signal name="clicked" handler="on_enter_clicked" />
               </widget>
               <packing>
                 <property name="expand">False</property>
@@ -248,7 +248,7 @@
     <property name="title" translatable="yes">eDakia</property>
     <property name="window_position">center-always</property>
     <property name="icon">logopostbox.jpg</property>
-    <signal name="destroy" handler="on_pypassword_destroy" swapped="no"/>
+    <signal name="destroy" handler="on_pypassword_destroy" />
     <child>
       <widget class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
@@ -317,7 +317,7 @@
                 <property name="secondary_icon_activatable">False</property>
                 <property name="primary_icon_sensitive">True</property>
                 <property name="secondary_icon_sensitive">True</property>
-                <signal name="key_press_event" handler="on_field_sender_password_key_press_event" swapped="no"/>
+                <signal name="key_press_event" handler="on_field_sender_password_key_press_event" />
               </widget>
               <packing>
                 <property name="expand">True</property>
@@ -382,7 +382,7 @@
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_action_appearance">False</property>
-                <signal name="clicked" handler="on_password_cancel_clicked" swapped="no"/>
+                <signal name="clicked" handler="on_password_cancel_clicked" />
               </widget>
               <packing>
                 <property name="expand">False</property>
@@ -397,7 +397,7 @@
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_action_appearance">False</property>
-                <signal name="clicked" handler="on_login_clicked" swapped="no"/>
+                <signal name="clicked" handler="on_login_clicked" />
               </widget>
               <packing>
                 <property name="expand">False</property>
