--- a/ui/secret_code.glade
+++ b/ui/secret_code.glade
@@ -11,7 +11,7 @@
     <property name="resizable">False</property>
     <property name="window_position">center-always</property>
     <property name="icon">logopostbox-small.jpg</property>
-    <signal name="destroy" handler="on_secret_window_destroy" swapped="no"/>
+    <signal name="destroy" handler="on_secret_window_destroy" />
     <child>
       <widget class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
@@ -79,7 +79,7 @@
                 <property name="secondary_icon_activatable">False</property>
                 <property name="primary_icon_sensitive">True</property>
                 <property name="secondary_icon_sensitive">True</property>
-                <signal name="key_press_event" handler="on_field_secret_code_key_press_event" swapped="no"/>
+                <signal name="key_press_event" handler="on_field_secret_code_key_press_event" />
               </widget>
               <packing>
                 <property name="expand">True</property>
@@ -144,7 +144,7 @@
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_action_appearance">False</property>
-                <signal name="clicked" handler="on_secret_cancel_button_clicked" swapped="no"/>
+                <signal name="clicked" handler="on_secret_cancel_button_clicked" />
               </widget>
               <packing>
                 <property name="expand">False</property>
@@ -160,7 +160,7 @@
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_action_appearance">False</property>
-                <signal name="clicked" handler="on_secret_enter_button_clicked" swapped="no"/>
+                <signal name="clicked" handler="on_secret_enter_button_clicked" />
               </widget>
               <packing>
                 <property name="expand">False</property>
