--- a/ui/dakia.glade
+++ b/ui/dakia.glade
@@ -11,8 +11,8 @@
     <property name="window_position">center-always</property>
     <property name="icon">logopostbox-small.jpg</property>
     <property name="type_hint">dialog</property>
-    <signal name="destroy" handler="on_mainWindow_destroy" swapped="no"/>
-    <signal name="key_press_event" handler="on_mainWindow_key_press_event" swapped="no"/>
+    <signal name="destroy" handler="on_mainWindow_destroy" />
+    <signal name="key_press_event" handler="on_mainWindow_key_press_event" />
     <child>
       <widget class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
