--- a/ui/scan_window.glade
+++ b/ui/scan_window.glade
@@ -9,7 +9,7 @@
     <property name="can_focus">False</property>
     <property name="resizable">False</property>
     <property name="window_position">center-always</property>
-    <signal name="destroy" handler="on_scanWindow_destroy" swapped="no"/>
+    <signal name="destroy" handler="on_scanWindow_destroy" />
     <child>
       <widget class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
@@ -91,7 +91,7 @@
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
                     <property name="use_action_appearance">False</property>
-                    <signal name="clicked" handler="on_send_enter_clicked" swapped="no"/>
+                    <signal name="clicked" handler="on_send_enter_clicked" />
                   </widget>
                   <packing>
                     <property name="expand">False</property>
