--- a/ui/dakia.glade
+++ b/ui/dakia.glade
@@ -1,30 +1,26 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0"?>
 <glade-interface>
   <!-- interface-requires gtk+ 2.24 -->
   <!-- interface-naming-policy project-wide -->
   <widget class="GtkWindow" id="mainWindow">
     <property name="width_request">400</property>
     <property name="height_request">250</property>
-    <property name="can_focus">False</property>
     <property name="title" translatable="yes">eDakia</property>
     <property name="resizable">False</property>
     <property name="window_position">center-always</property>
     <property name="icon">logopostbox-small.jpg</property>
     <property name="type_hint">dialog</property>
-    <signal name="destroy" handler="on_mainWindow_destroy" />
-    <signal name="key_press_event" handler="on_mainWindow_key_press_event" />
+    <signal name="destroy" handler="on_mainWindow_destroy"/>
+    <signal name="key_press_event" handler="on_mainWindow_key_press_event"/>
     <child>
       <widget class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
         <child>
           <widget class="GtkHBox" id="hbox1">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
             <child>
               <widget class="GtkImage" id="logo">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
                 <property name="pixbuf">logopostbox-small.jpg</property>
               </widget>
               <packing>
@@ -36,13 +32,10 @@
             <child>
               <widget class="GtkLabel" id="heading">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
                 <property name="label" translatable="yes">    Welcome to e-Dakia
-ई-डाकिया में आपका स्वागत है </property>
+&#x908;-&#x921;&#x93E;&#x915;&#x93F;&#x92F;&#x93E; &#x92E;&#x947;&#x902; &#x906;&#x92A;&#x915;&#x93E; &#x938;&#x94D;&#x935;&#x93E;&#x917;&#x924; &#x939;&#x948; </property>
               </widget>
               <packing>
-                <property name="expand">True</property>
-                <property name="fill">True</property>
                 <property name="position">1</property>
               </packing>
             </child>
@@ -56,17 +49,16 @@
         <child>
           <widget class="GtkHButtonBox" id="hbuttonbox2">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
             <property name="spacing">20</property>
             <property name="layout_style">center</property>
             <child>
               <widget class="GtkButton" id="mainSend">
                 <property name="label" translatable="yes">Press 1 to Send Paper
-डाक भेजने के लिए १ दबाये </property>
+&#x921;&#x93E;&#x915; &#x92D;&#x947;&#x91C;&#x928;&#x947; &#x915;&#x947; &#x932;&#x93F;&#x90F; &#x967; &#x926;&#x92C;&#x93E;&#x92F;&#x947; </property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
+                <signal name="clicked" handler="on_mainSend_clicked" object="mainWindow" after="yes"/>
               </widget>
               <packing>
                 <property name="expand">False</property>
@@ -77,11 +69,11 @@
             <child>
               <widget class="GtkButton" id="mainReceive">
                 <property name="label" translatable="yes">Press 2 to Receive Paper
-डाक प्राप्ति के लिए २ दबाये </property>
+&#x921;&#x93E;&#x915; &#x92A;&#x94D;&#x930;&#x93E;&#x92A;&#x94D;&#x924;&#x93F; &#x915;&#x947; &#x932;&#x93F;&#x90F; &#x968; &#x926;&#x92C;&#x93E;&#x92F;&#x947; </property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
+                <signal name="clicked" handler="on_mainReceive_clicked" object="mainWindow"/>
               </widget>
               <packing>
                 <property name="expand">False</property>
@@ -91,20 +83,16 @@
             </child>
           </widget>
           <packing>
-            <property name="expand">True</property>
-            <property name="fill">True</property>
             <property name="position">1</property>
           </packing>
         </child>
         <child>
           <widget class="GtkStatusbar" id="statusbar1">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
             <property name="spacing">2</property>
           </widget>
           <packing>
             <property name="expand">False</property>
-            <property name="fill">True</property>
             <property name="position">2</property>
           </packing>
         </child>
